facebook login attempt

--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
+    <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '364122993775135',
+      xfbml      : true,
+      version    : 'v2.3'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
