--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
         <span class="sr-only">Next</span>
       </a>
     </div><!-- /.carousel -->
-
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
 <div id="status">
 </div>
     <!-- Marketing messaging and featurettes
