final working login

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
        
         <div id="navbar" class="navbar-form navbar-right">
-          <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
+          <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false"></div>
              <!--   <form class="navbar-form navbar-right">
               <button type="submit" class="btn btn-success"scope="public_profile,email" onlogin="checkLoginState();">Facebook Login</button>
           </form>-->
