edit to slide first

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="https://tancap.in/wallpaper/7/5/blue-wood-good.jpg;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide" style="height:600px">
+          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide" style="height:600px">
           <div class="container">
             <div class="carousel-caption">
               <font>
