twiiter account correct

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://www.facebook.com/rachitgoell"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://www.twitter.com/linkRachit"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="https://www.facebook.com/rachitgoell"><i class="fa fa-facebook"></i></a>
                         </li>
