--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
         <div class="container">
 
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" >
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">  Rachit Goel  <br><br>Full Stack Developer</a>
+                <a class="navbar-brand page-scroll" href="#page-top">  Rachit Goel </a>
             </div>
 
 
      
-            <div class="collapse navbar-collapse" >
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
