--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
                         <li>
                             <div class="timeline-image">
                                 <h4>
-                                    <br>Sept'13-Aug'14</h4>
+                                    <br>
+                                    Sept'13-Aug'14</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
