social network updated

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <ul class="list-inline social-buttons">
                         <li><a href="https://www.twitter.com/linkRachit"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://www.facebook.com/rachitgoell"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/linkRachit"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="https://in.linkedin.com/pub/rachit-goel/66/637/896"><i class="fa fa-linkedin"></i></a>
                         </li>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <span class="copyright">Copyright &copy; 2016 by <a href="index.html">Rachit Goel</a></span>
+                    <span class="copyright">Copyright &copy; 2016-2017 by <a href="index.html">Rachit Goel</a></span>
                 </div>
                 
                 
