--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li>
+                        <li class="timeline-inverted"> 
                             <div class="timeline-image">
                                 <h4>
                                     <br>
@@ -106,6 +106,22 @@
                                 <!-- <div class="timeline-heading"> -->
                                     <h4>Backend Developer</h4>
                                     <h4>Solomofy Technology Pvt Ltd, Noida</h4>
+                                    <p class="text-muted">
+                                    Build And Enhance the Web Applications using latest technologies. 
+                                    <br>
+Projects : 
+<br>
+- Build an Online Donation Portal for Vrindavan Chandrodaya Mandir
+<br>
+- Build a module to ease the payment from India and overseas on the website Solomofy.com
+<br>
+- Build And Enhance the web application Media Library
+<br>
+- Build the File-Sync Application for all platforms through Electron
+<br>
+- Build and Setup the module of Facebook Live Reactions
+<br>
+</p>
                                     
                                 <!-- </div> -->
                                 <!-- <div class="timeline-body">
